fix(button): allowed inline link text to wrap and use with span element

--- a/src/patternfly/components/Button/button.scss
+++ b/src/patternfly/components/Button/button.scss
@@ -329,6 +329,9 @@
 
       display: inline;
       padding: 0;
+      text-align: left;
+      white-space: normal;
+      cursor: pointer;
 
       &:hover {
         --pf-c-button--m-link--Color: var(--pf-c-button--m-link--m-inline--hover--Color);
